August 7, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/r3000a.h: Refactored the interrupt scheduling code to make it a
   little more readable than using the "magic" numbers.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/cdrom.c: Likewise.
 * libpcsxcore/mdec.c: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxdma.h: Likewise.
 * libpcsxcore/misc.c: Bumped savestate version.
 * debian/changelog: Updated version.
 * macosx/Info.plist: Likewise.
 * po/zh_TW.po: Corrected a minor translation error.

August 2, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/Pcsx.xcodeproj/project.pbxproj: Added some more optimizations
   parameters for the Deployment build.

August 1, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfinput/cfg-gtk2.c: Only accept axis input if the current axis
   position is off enough from the previous position or initial position.
 * macosx/plugins/DFInput/macsrc/cfg.c: Likewise.
 * macosx/plugins/DFInput/macsrc/cfg.h: Likewise.
 * macosx/plugins/DFInput/macsrc/MappingCell.m: Likewise.
 * macosx/plugins/DFInput/DFInput.xcodeproj/project.pbxproj: Fixed compile
   error.

July 31, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/spu.c: Silenced warning on Mac OS X and FreeBSD.
 * macosx/plugins/DFInput/SDL/include/SDL_haptic.h: Upgraded to SDL 1.3 Beta.
 * macosx/plugins/DFInput/SDL/include/SDL_error.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/begin_code.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/close_code.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_endian.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_joystick.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_main.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_stdinc.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_platform.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_config.h: Likewise.