@@ -1,3 +1,10 @@
+August 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * plugins/dfcdrom/cdr.c: Fixed thread deadlock in some cases.
+ * plugins/dfcdrom/cdr.h: Likewise.
+ * macosx/plugins/DFCdrom/macsrc/cdr-macosx.c: Likewise.
+ * plugins/dfnet/cfg.c: Silenced warning.
+
 August 7, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * libpcsxcore/r3000a.h: Refactored the interrupt scheduling code to make it a
